gtkplug.c: remove draw function, not needed

Background will be rendered by parent class - GtkWindow.

https://bugzilla.gnome.org/show_bug.cgi?id=754854