gtk/gtkplug.c
@@ -91,8 +91,6 @@ static void            gtk_plug_show                  (GtkWidget        *widget)
 static void            gtk_plug_hide                  (GtkWidget        *widget);
 static void            gtk_plug_map                   (GtkWidget        *widget);
 static void            gtk_plug_unmap                 (GtkWidget        *widget);
-static gboolean        gtk_plug_draw                  (GtkWidget        *widget,
-						       cairo_t          *cr);
 static gboolean        gtk_plug_key_press_event       (GtkWidget        *widget,
 						       GdkEventKey      *event);
 static gboolean        gtk_plug_focus_event           (GtkWidget        *widget,
@@ -176,7 +174,6 @@ gtk_plug_class_init (GtkPlugClass *class)
   widget_class->hide = gtk_plug_hide;
   widget_class->map = gtk_plug_map;
   widget_class->unmap = gtk_plug_unmap;
-  widget_class->draw = gtk_plug_draw;
   widget_class->focus = gtk_plug_focus;
 
   gtk_widget_class_set_accessible_role (widget_class, ATK_ROLE_PANEL);
@@ -692,18 +689,6 @@ gtk_plug_unrealize (GtkWidget *widget)
     }
 
   GTK_WIDGET_CLASS (gtk_plug_parent_class)->unrealize (widget);
-}
-
-static gboolean
-gtk_plug_draw (GtkWidget *widget,
-	       cairo_t   *cr)
-{
-  gtk_render_background (gtk_widget_get_style_context (widget), cr,
-                         0, 0,
-                         gtk_widget_get_allocated_width (widget),
-                         gtk_widget_get_allocated_height (widget));
-
-  return GTK_WIDGET_CLASS (gtk_plug_parent_class)->draw (widget, cr);
 }
 
 static void
